# SlicerMarkupsToModel

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  wheel.cmake
.github/workflows/: build-wheels.yml  ci.yml  release.yml
MarkupsToModel/Logic/: CMakeLists.txt  vtk.module  vtkSlicerMarkupsToModelModuleLogicExport.h.in  wheel.cmake
MarkupsToModel/MRML/: CMakeLists.txt  vtk.module  vtkSlicerMarkupsToModelModuleMRMLExport.h.in  wheel.cmake
Python/: slicer_markups_to_model.py
