[build-system]
requires = [
  "scikit-build-core",
  "slicer-core-sdk==5.11.0.*",
  "vtk-sdk==9.6.0",
  "vtk-sdk-python-wheel-helper"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = ["-GNinja", "-DCMAKE_BUILD_TYPE=Release"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[project]
name = "slicer-markups-to-model"
version = "1.0.0"
readme = "README.md"
description = "Slicer Markups to Model is an extension of 3D Slicer for creating 3D surface models"
license = { text = "BSD 3-Clause License" }
authors = [
  { name = "Thomas Vaughan"},
  { name = "Andras Lasso" },
  { name = "Adam Rankin" },
  { name = "Aniqah Mair" },
  { name = "Jaime Garcia Guevara" },
]
keywords = ["Python", "VTK", "ITK", "3DSlicer", "Slicer", "Medical"]
dependencies = ["slicer-core==5.11.0.*"]

classifiers = [
  "License :: OSI Approved :: BSD-3-Clause",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: C++",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: 3D Rendering",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS"
]
